--- a/js_week3.html
+++ b/js_week3.html
@@ -122,7 +122,7 @@
 			item4
 		</div>
 		<div class="burger">
-			<img style="width:100%;height:auto;" src="/img/meunicon.png">
+			<img style="width:100%;height:auto;" src="./img/meunicon.png">
 		</div>
 	</header>
 	<div class="bar">
